# Firewall-Rule-Generator

Firewall-Rule-Generator/: README.md  pyproject.toml  result.json
Firewall-Rule-Generator/examples/: sample.txt
Firewall-Rule-Generator/src/: service.py
